# chess_backend

./: .env.example  .gitignore  .vercelignore  DEPLOY.md  Dockerfile  MANIFEST.in  Procfile  README.md  pyproject.toml  render.yaml  requirements-minimal.txt  requirements-vercel.txt  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_game_session_clock.py
app/: __main__.py  cli.py  main.py
app/api/: auth.py  game.py  health.py  user.py
app/core/: config.py  database.py  logger.py  security.py
app/dependencies/: deps.py
app/middleware/: __init__.py  exception_handlers.py  logging_middleware.py
app/models/: __init__.py  game.py  user.py
app/repositories/: __init__.py  game_repository.py  user_repository.py
app/schemas/: common.py  game.py  user.py  websocket.py
app/services/: auth_service.py  chess_engine_service.py  game_service.py  game_session_service.py  user_service.py  websocket_service.py  websocket_session_manager.py
app/utils/: chess_utils.py  database_url.py  exceptions.py
tests/: test_health.py
