[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-backend"
version = "1.0.0"
description = "Production-ready Chess API with FastAPI, WebSocket, and Supabase PostgreSQL"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Chess Backend Team" }]
keywords = ["chess", "fastapi", "websocket", "supabase"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Minimal runtime — no Stockfish binary, no Alembic, no bcrypt
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30.0,<0.31",
    "pydantic>=2.10.0,<2.11",
    "pydantic-settings>=2.7.0,<2.8",
    "python-dotenv>=1.0.0,<2",
    "PyJWT>=2.8.0,<3",
    "python-chess>=1.999,<2",
]

[project.optional-dependencies]
# Faster local/production server (uvloop, httptools)
server = ["uvicorn[standard]>=0.34.0", "websockets>=14.0"]
# Stockfish Python wrapper (binary must be installed separately)
engine = ["stockfish>=3.28.0"]
# Database migrations (dev/CI/deploy build step)
migrate = ["alembic>=1.14.0", "psycopg[binary]>=3.2.0"]
# Python 3.9 compatibility for Pydantic union syntax
py39 = ["eval-type-backport>=0.2.0"]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.25.0", "httpx>=0.28.0", "eval-type-backport>=0.2.0"]
all = ["chess-backend[server,engine,migrate,dev]"]

[project.scripts]
chess-backend = "app.cli:main"

[project.urls]
Documentation = "https://github.com/your-org/chess-backend#readme"
Repository = "https://github.com/your-org/chess-backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.setuptools.data-files]
"." = ["alembic.ini"]
"alembic" = [
    "alembic/env.py",
    "alembic/script.py.mako",
    "alembic/versions/001_initial_schema.py",
    "alembic/versions/002_game_session_clock.py",
]

[tool.vercel]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
